@@ -3,5 +3,6 @@ package com.alphatica.alis.trading.optimizer;
 public enum ResultVerifier {
 	NONE,
 	REMOVE_MARKETS,
-	REMOVE_ORDERS
+	REMOVE_ORDERS,
+	FUZZY_START_TIME,
 }
